--- a/src/cabinets.Core/Pages/News/NewsDetailPage.xaml
+++ b/src/cabinets.Core/Pages/News/NewsDetailPage.xaml
@@ -7,6 +7,7 @@
                       xmlns:views="clr-namespace:MvvmCross.Forms.Views;assembly=MvvmCross.Forms"
                       xmlns:news="clr-namespace:cabinets.Core.ViewModels.News;assembly=cabinets.Core"
                       xmlns:forms="clr-namespace:FFImageLoading.Forms;assembly=FFImageLoading.Forms"
+                      xmlns:contentViews="clr-namespace:cabinets.Core.ContentViews;assembly=cabinets.Core"
                       mc:Ignorable="d"
                       x:Class="cabinets.Core.Pages.News.NewsDetailPage"
                       Title="Новости">
@@ -22,7 +23,16 @@
                         </Style>
                     </ResourceDictionary>
                 </StackLayout.Resources>
-                <forms:CachedImage Source="{Binding News.Image}" Margin="0,5" HorizontalOptions="Center" />
+                <CarouselView HeightRequest="170" ItemsSource="{Binding News.DetailPictureSources}">
+                    <CarouselView.ItemsLayout>
+                        <LinearItemsLayout Orientation="Horizontal" ItemSpacing="70" />
+                    </CarouselView.ItemsLayout>
+                    <CarouselView.ItemTemplate>
+                        <DataTemplate>
+                            <contentViews:CarouselContentView />
+                        </DataTemplate>
+                    </CarouselView.ItemTemplate>
+                </CarouselView>
                 <Label Text="{Binding News.Title}" Style="{StaticResource Label}" />
                 <Label Text="{Binding News.DetailText}" Style="{StaticResource Label}" />
             </StackLayout>
