:sparkles: custom form presentation

--- a/src/cabinets.Core/Views/BookingsViewCell.xaml
+++ b/src/cabinets.Core/Views/BookingsViewCell.xaml
@@ -8,10 +8,10 @@
           x:Class="cabinets.Core.Views.BookingsViewCell">
     <ViewCell.View>
         <!--Ячейка представления для списка мои бронирования в профиле-->
-        <StackLayout Orientation="Horizontal">
-            <Label Text="{Binding Date, StringFormat='{}{0:dd.MM.yyyy}'}" TextColor="#505050" HorizontalOptions="Start" />
+        <StackLayout Orientation="Horizontal" Margin="0,15" BackgroundColor="Red">
+            <Label FontSize="16" Text="{Binding Date, StringFormat='{}{0:dd.MM.yyyy}'}" TextColor="#505050" HorizontalOptions="Start" />
             <Label TextColor="#505050" HorizontalOptions="EndAndExpand"
-                   FontSize="14" VerticalOptions="Center" Text="{Binding Cabinet.Name}" />
+                   FontSize="16" VerticalOptions="Center" Text="{Binding Cabinet.Name}" />
             <Image Source="ic_shape.png"
                    WidthRequest="8"
                    HeightRequest="12" HorizontalOptions="End" VerticalOptions="Center" />
