--- a/src/cabinets.Core/Pages/Profile/ProfilePage.xaml
+++ b/src/cabinets.Core/Pages/Profile/ProfilePage.xaml
@@ -4,7 +4,6 @@
                       xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
                       xmlns:d="http://xamarin.com/schemas/2014/forms/design"
                       xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-                      xmlns:viewCell="clr-namespace:cabinets.Views"
                       xmlns:views="clr-namespace:MvvmCross.Forms.Views;assembly=MvvmCross.Forms"
                       xmlns:profile="clr-namespace:cabinets.Core.ViewModels.Profile;assembly=cabinets.Core"
                       xmlns:views1="clr-namespace:cabinets.Core.Views;assembly=cabinets.Core"
@@ -20,70 +19,82 @@
 
     <ContentPage.Content>
         <!--Страница профиля-->
-        <StackLayout>
-            <StackLayout.Resources>
-                <ResourceDictionary>
-                    <Style x:Key="Label" TargetType="Label">
-                        <Setter Property="FontSize" Value="18" />
-                        <Setter Property="TextColor" Value="#505050" />
-                    </Style>
-                </ResourceDictionary>
-            </StackLayout.Resources>
-            <StackLayout Margin="0,10" BackgroundColor="#ffffff" Padding="20">
-                <Label Text="{Binding User.Name}" Style="{StaticResource Label}" />
-                <Label>
-                    <Label.FormattedText>
-                        <FormattedString>
-                            <FormattedString.Spans>
-                                <Span Text="Телефон: " />
-                                <Span Text="{Binding User.Phone}" />
-                            </FormattedString.Spans>
-                        </FormattedString>
-                    </Label.FormattedText>
-                </Label>
-                <Label>
-                    <Label.FormattedText>
-                        <FormattedString>
-                            <FormattedString.Spans>
-                                <Span Text="E-mail: " />
-                                <Span Text="{Binding User.Email}" />
-                            </FormattedString.Spans>
-                        </FormattedString>
-                    </Label.FormattedText>
-                </Label>
-                <Label>
-                    <Label.FormattedText>
-                        <FormattedString>
-                            <FormattedString.Spans>
-                                <Span Text="К оплате: " />
-                                <Span Text="{Binding Amount}" />
-                                <Span Text=" руб." />
-                            </FormattedString.Spans>
-                        </FormattedString>
-                    </Label.FormattedText>
-                </Label>
-            </StackLayout>
-            <StackLayout BackgroundColor="White" Padding="20">
-                <Label Text="Мои бронирования" Style="{StaticResource Label}" />
-                <ListView HasUnevenRows="True"
-                          VerticalScrollBarVisibility="Never"
-                          SelectedItem="{Binding SelectedBooking}"
-                          ItemTapped="ListView_ItemTapped"
-                          HorizontalOptions="FillAndExpand"
-                          VerticalOptions="FillAndExpand"
-                          IsPullToRefreshEnabled="True"
-                          RefreshCommand="{Binding RefreshCommand}"
-                          IsRefreshing="{Binding IsRefreshing}"
-                          ItemsSource="{Binding Bookings}">
-                    <ListView.ItemTemplate>
-                        <DataTemplate>
-                            <views1:BookingsViewCell />
-                        </DataTemplate>
-                    </ListView.ItemTemplate>
-                </ListView>
-            </StackLayout>
+        <RefreshView Command="{Binding RefreshCommand}"
+                     IsRefreshing="{Binding IsRefreshing}">
+            <ScrollView>
+                <StackLayout>
+                    <StackLayout.Resources>
+                        <ResourceDictionary>
+                            <Style x:Key="Label" TargetType="Label">
+                                <Setter Property="FontSize" Value="18" />
+                                <Setter Property="TextColor" Value="#505050" />
+                            </Style>
+                        </ResourceDictionary>
+                    </StackLayout.Resources>
+                    <StackLayout Margin="0,10" BackgroundColor="#ffffff" Padding="20">
+                        <StackLayout.GestureRecognizers>
+                            <TapGestureRecognizer Tapped="TapGestureRecognizer_OnTapped"/>
+                        </StackLayout.GestureRecognizers>
+                        <Label Text="{Binding User.Name}" Style="{StaticResource Label}" />
+                        <Label>
+                            <Label.FormattedText>
+                                <FormattedString>
+                                    <FormattedString.Spans>
+                                        <Span Text="Телефон: " />
+                                        <Span Text="{Binding User.Phone}" />
+                                    </FormattedString.Spans>
+                                </FormattedString>
+                            </Label.FormattedText>
+                        </Label>
+                        <Label>
+                            <Label.FormattedText>
+                                <FormattedString>
+                                    <FormattedString.Spans>
+                                        <Span Text="E-mail: " />
+                                        <Span Text="{Binding User.Email}" />
+                                    </FormattedString.Spans>
+                                </FormattedString>
+                            </Label.FormattedText>
+                        </Label>
+                        <Label>
+                            <Label.FormattedText>
+                                <FormattedString>
+                                    <FormattedString.Spans>
+                                        <Span Text="К оплате: " />
+                                        <Span Text="{Binding Amount}" />
+                                        <Span Text=" руб." />
+                                    </FormattedString.Spans>
+                                </FormattedString>
+                            </Label.FormattedText>
+                        </Label>
+                    </StackLayout>
+                    <StackLayout BackgroundColor="White" Padding="20">
+                        <Label Text="Мои бронирования" Style="{StaticResource Label}" />
+                        <!--SelectedItem="{Binding SelectedBooking}"-->
+                        <StackLayout HorizontalOptions="FillAndExpand"
+                             VerticalOptions="FillAndExpand"
+                             BindableLayout.ItemsSource="{Binding Bookings}">
+                            <BindableLayout.ItemTemplate>
+                                <DataTemplate>
+                                    <StackLayout>
+                                        <StackLayout Orientation="Horizontal" Margin="0,15">
+                                            <Label FontSize="16" Text="{Binding Date, StringFormat='{}{0:dd.MM.yyyy}'}" TextColor="#505050" HorizontalOptions="Start" />
+                                            <Label TextColor="#505050" HorizontalOptions="EndAndExpand"
+                                                   FontSize="16" VerticalOptions="Center" Text="{Binding Cabinet.Name}" />
+                                            <Image Source="ic_shape.png"
+                                                   WidthRequest="8"
+                                                   HeightRequest="12" HorizontalOptions="End" VerticalOptions="Center" />
+                                        </StackLayout>
+                                        <BoxView BackgroundColor="DarkGray" HeightRequest="1" HorizontalOptions="Fill"/>
+                                    </StackLayout>
+                                </DataTemplate>
+                            </BindableLayout.ItemTemplate>
+                        </StackLayout>
+                    </StackLayout>
 
-            <Button Text="Выход" Command="{Binding LogoutCommand}" />
-        </StackLayout>
+                    <Button Text="Выход" Command="{Binding LogoutCommand}" />
+                </StackLayout>
+            </ScrollView>
+        </RefreshView>
     </ContentPage.Content>
 </views:MvxContentPage>
