--- a/src/cabinets.Core/Pages/Calendar/CalendarPage.xaml
+++ b/src/cabinets.Core/Pages/Calendar/CalendarPage.xaml
@@ -1,6 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 
-<views:MvxContentPage x:TypeArguments="viewModels1:CalendarViewModel" xmlns="http://xamarin.com/schemas/2014/forms"
+<views:MvxContentPage x:TypeArguments="calendar:CalendarViewModel" xmlns="http://xamarin.com/schemas/2014/forms"
                       xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
                       xmlns:d="http://xamarin.com/schemas/2014/forms/design"
                       xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
@@ -9,8 +9,9 @@
                       xmlns:views1="clr-namespace:cabinets.Core.Views;assembly=cabinets.Core"
                       xmlns:viewModels1="clr-namespace:cabinets.Core.ViewModels;assembly=cabinets.Core"
                       xmlns:controls="clr-namespace:XamForms.Controls;assembly=XamForms.Controls.Calendar"
+                      xmlns:calendar="clr-namespace:cabinets.Core.ViewModels.Calendar;assembly=cabinets.Core"
                       mc:Ignorable="d"
-                      x:Class="cabinets.Core.Pages.CalendarPage"
+                      x:Class="cabinets.Core.Pages.Calendar.CalendarPage"
                       Title="Календарь"
                       d:NavigationPage.HasNavigationBar="True">
     <views:MvxContentPage.IconImageSource>
