--- a/src/cabinets.Core/Views/BookingLayout.xaml
+++ b/src/cabinets.Core/Views/BookingLayout.xaml
@@ -1,20 +1,17 @@
 ﻿<?xml version="1.0" encoding="UTF-8"?>
-
-<ViewCell xmlns="http://xamarin.com/schemas/2014/forms"
+<StackLayout xmlns="http://xamarin.com/schemas/2014/forms"
           xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
           xmlns:d="http://xamarin.com/schemas/2014/forms/design"
           xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
           mc:Ignorable="d"
-          x:Class="cabinets.Core.Views.BookingsViewCell">
-    <ViewCell.View>
+          x:Class="cabinets.Core.Views.BookingLayout"
+          Orientation="Horizontal"
+          Margin="0,15">
         <!--Ячейка представления для списка мои бронирования в профиле-->
-        <StackLayout Orientation="Horizontal" Margin="0,15" BackgroundColor="Red">
             <Label FontSize="16" Text="{Binding Date, StringFormat='{}{0:dd.MM.yyyy}'}" TextColor="#505050" HorizontalOptions="Start" />
             <Label TextColor="#505050" HorizontalOptions="EndAndExpand"
                    FontSize="16" VerticalOptions="Center" Text="{Binding Cabinet.Name}" />
             <Image Source="ic_shape.png"
                    WidthRequest="8"
                    HeightRequest="12" HorizontalOptions="End" VerticalOptions="Center" />
-        </StackLayout>
-    </ViewCell.View>
-</ViewCell>
+</StackLayout>
